# diversifind

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: api_guide.md  research_report.md
examples/: basic_usage.py  real_data_example.ipynb
examples/data/: sample_closes.csv
experiments/: logdet_beam.py  logdet_bruteforce.py  logdet_pruned.py
experiments/archive/: compare_algorithms.py  runtime_scaling.py
experiments/archive/output/: runtime_scaling.json
src/diversifind/: __init__.py  analytics.py  results.py  search_methods.py  utils.py
src/diversifind.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: conftest.py  test_analytics.py  test_beam.py  test_bruteforce.py  test_greedy.py  test_results.py  test_utils.py
