[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "diversifind"
version = "0.1.1"
description = "Algorithms for finding maximally diversified portfolios using the log-determinant objective."
keywords = ["portfolio", "diversification", "correlation", "optimization", "finance"]
authors = [
  { name = "FJ Hsu" }
]
readme = "README.md"
license = "MIT"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Financial and Insurance Industry",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Office/Business :: Financial :: Investment",
  "Operating System :: OS Independent"
]
requires-python = ">=3.9"
dependencies = [
  "numpy"
]

[tool.setuptools.packages.find]
where = ["src"]
